# stm32h747i-disco

./: Cargo.toml  LICENSE-0BSD.txt  README.md  memory.x  openocd.cfg
.cargo/: config.toml
examples/: bitfield.rs  blinky.rs  blinky.rs.off  format.rs  hello.rs  levels.rs  overflow.rs  panic.rs
src/: board.rs  led.rs  lib.rs  prelude.rs
tests/: integration.rs
tools/: capture_example_bloat.sh
