[package]
edition = "2018"
authors = ["Thomas Kilian <thomas-kilian@gmx.net>"]
categories = [
    "embedded",
    "no-std",
]
description = "Board support crate for the STM32H747I DISCOVERY microcontroller board"
documentation = "https://docs.rs/crate/stm32h747i-disco"
keywords = [
    "arm",
    "cortex-m",
    "template",
    "bsp",
    "stm32",
    "stm32H747"
]
license = "0BSD"
name = "stm32h747i-disco"
repository = "https://github.com/BigPapa314/stm32h747i-disco"
version = "0.1.0"
readme = "README.md"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.stm32h7xx-hal]
default-features = false
features = ["rt", "stm32h747cm7"]
version = "0.7.1"

[dev-dependencies]
ssd1306 = "0.4"
nb = "1.0"
panic-halt = "0.2.0"
l3gd20 = "0.2.0"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
